--- a/MVCJquery/bin/MVCJquery.dll.config
+++ b/MVCJquery/bin/MVCJquery.dll.config
@@ -63,7 +63,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="MVCTutorialEntities" connectionString="metadata=res://*/Models.Model.csdl|res://*/Models.Model.ssdl|res://*/Models.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=AR-IT00893;initial catalog=MVCTutorial;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="MVCTutorialEntities" connectionString="metadata=res://*/Models.Model.csdl|res://*/Models.Model.ssdl|res://*/Models.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LOCAL);initial catalog=MVCTutorial;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
