Agrego cadena de conexion Server Somee.

--- a/MVCJquery/Web.config
+++ b/MVCJquery/Web.config
@@ -63,7 +63,8 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="MVCTutorialEntities" connectionString="metadata=res://*/Models.Model.csdl|res://*/Models.Model.ssdl|res://*/Models.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LOCAL);initial catalog=MVCTutorial;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="MVCTutorialEntities" connectionString="metadata=res://*/Models.Model.csdl|res://*/Models.Model.ssdl|res://*/Models.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LOCAL);initial catalog=MVCTutorial;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="MVCTutorialEntities" connectionString="metadata=res://*/Models.Model.csdl|res://*/Models.Model.ssdl|res://*/Models.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=workstation id=MVCTutorial.mssql.somee.com;packet size=4096;user id=antunezjose1991_SQLLogin_1;pwd=t9dj3pblvr;data source=MVCTutorial.mssql.somee.com;persist security info=False;initial catalog=MVCTutorial; MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
